updated buy button

--- a/store/mcr-002/index.html
+++ b/store/mcr-002/index.html
@@ -74,42 +74,52 @@
           <hr class="separator">
           <div class="pressing-info">
             <h3>Pressing Info:</h3>
-            <p>First Pressing<br>Black Vinyl x100<br>MCR002</p>
+            <p>First Pressing<br>Black Vinyl x100<br>MCR-002</p>
           </div>
         </div>
       </div>
       <hr class="separator wide-separator">
     </main>
 
+    <!-- Description Section -->
+    <section class="description-section">
+      <p>
+        Cryhard is an indie/alternative band based out of Oklahoma City and consists of members Bailey Little, Patrick Hanscom, Zachary Kampf, Jenny Mayes, and Malcolm Bensinger. Cryhard is a project in which everyone fills different roles depending on the track. This project has been in the works since 2018 and has had assistance from several good friends along the way.<br><br>
+      </p>
+      <p>
+        Of Course I Will is the band's first full-length LP that reflects on themes of growing up, anxiety, and love. Recorded in Bailey’s spare bedroom, this album embraces its DIY roots with a warm lo-fi sound.
+      </p>
+    </section>
+
     <!-- Footer Section -->
-<footer class="footer">
-  <div class="footer-top">
-    <div class="footer-logo-container">
-      <div class="footer-logo">
-        <img src="../../images/footer-logo.svg" alt="Footer Logo">
+    <footer class="footer">
+      <div class="footer-top">
+        <div class="footer-logo-container">
+          <div class="footer-logo">
+            <img src="../../images/footer-logo.svg" alt="Footer Logo">
+          </div>
+          <div class="footer-vertical-separator"></div>
+        </div>
+        <nav class="footer-nav">
+          <a href="../../store">STORE</a>
+          <a href="../../artists">ARTISTS</a>
+          <a href="../../about">ABOUT</a>
+        </nav>
       </div>
-      <div class="footer-vertical-separator"></div>
-    </div>
-    <nav class="footer-nav">
-      <a href="../../store">STORE</a>
-      <a href="../../artists">ARTISTS</a>
-      <a href="../../about">ABOUT</a>
-    </nav>
-  </div>
-  <div class="footer-horizontal-separator"></div>
-  <div class="footer-bottom">
-    <div class="footer-tagline">
-      <p>UNEXPLAINABLY GOOD MUSIC.</p>
-      <img src="../../images/footer-icon.svg" alt="Footer Icon">
-    </div>
-    <div class="footer-copyright">
-      <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
-    </div>
-    <div class="footer-social">
-      <img src="../../images/social-icons.svg" alt="Social Icons">
-    </div>
-  </div>
-</footer>
+      <div class="footer-horizontal-separator"></div>
+      <div class="footer-bottom">
+        <div class="footer-tagline">
+          <p>UNEXPLAINABLY GOOD MUSIC.</p>
+          <img src="../../images/footer-icon.svg" alt="Footer Icon">
+        </div>
+        <div class="footer-copyright">
+          <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
+        </div>
+        <div class="footer-social">
+          <img src="../../images/social-icons.svg" alt="Social Icons">
+        </div>
+      </div>
+    </footer>
 
     <!-- Import Scripts -->
     <script src="../../scripts/carousel.js"></script>
