product page styling

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/home.css">
-
-    <script src="https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js"></script>
   </head>
 
   <body>      
     <!-- Header Section -->
     <header class="header">
       <div class="logo">
-        <img src="images/header-logo.svg" alt="Logo">
+        <a href="index.html">
+          <img src="images/header-logo.svg" alt="Logo">
+        </a>
       </div>
       <nav class="nav">
         <a href="store">STORE</a>
@@ -39,7 +39,8 @@
         <img src="images/hamburger-icon.svg" alt="Hamburger Menu">
       </div>
     </header>
-    <div class="header-spacer"></div> 
+    <div class="header-spacer"></div>
+
 
     <!-- Hero Section -->
     <div class="hero">
@@ -76,18 +77,20 @@
       <div class="merch-grid">
 
         <div class="merch-block">
-          <!-- Top square section for the product image -->
-          <div class="image-section">
-            <img src="store/mcr-002/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="product-image">
+          <div class="merch-block-image-container">
+            <a href="store/mcr-002/index.html" class="merch-link">
+              <img src="store/mcr-002/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+            </a>
           </div>
-          <!-- Bottom section with details and price -->
-          <div class="merch-details">
-            <div class="details-container">
-              <p class="artist-name">Cryhard</p>
-              <p class="item-name">OF COURSE I WILL - Cassette</p>
+          <div class="merch-block-details-container">
+            <div class="merch-block-names-container">
+              <a href="store/mcr-002/index.html" class="merch-link">
+                <p class="merch-block-artist-name">CRYHARD</p>
+                <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
+              </a>
             </div>
-            <div class="price-container">
-              <div class="price">$10</div>
+            <div class="merch-block-price-container">
+              <div class="merch-block-price">$10</div>
             </div>
           </div>
         </div>
@@ -126,7 +129,6 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="scripts/merch-block-image.js"></script>
      
   </body>
 </html>
