--- a/store/mcr-002/index.html
+++ b/store/mcr-002/index.html
@@ -17,12 +17,14 @@
     <link rel="stylesheet" href="../../css/footer.css">
     <link rel="stylesheet" href="../../css/product.css">
   </head>
-
+  
   <body>
     <!-- Header Section -->
     <header class="header">
       <div class="logo">
-        <img src="../../images/header-logo.svg" alt="Logo">
+        <a href="../../index.html">
+          <img src="../../images/header-logo.svg" alt="Logo">
+        </a>
       </div>
       <nav class="nav">
         <a href="../../store">STORE</a>
@@ -37,15 +39,16 @@
         <img src="../../images/hamburger-icon.svg" alt="Hamburger Menu">
       </div>
     </header>
-    <div class="header-spacer"></div> 
+    <div class="header-spacer"></div>
 
     <!-- Product Section -->
     <main class="product-section">
-      <div class="product-content">
-        <div class="product-carousel" data-product-id="7723835195446">
-          <div id="product-image-carousel"></div>
+      <div class="product-content-container">
+        <div class="product-image">
+          <img src="mcr-002.png" alt="Cryhard - Of Course I Will Cassette">
         </div>
-        <div class="product-details">
+        <div class="product-image-spacer"></div>
+        <div class="product-details-container">
           <h1 class="product-title">OF COURSE I WILL</h1>
           <h2 class="product-artist">Cryhard</h2>
           <p class="release-date">Release Date: July 19, 2024</p>
@@ -80,6 +83,7 @@
       </div>
       <hr class="separator wide-separator">
     </main>
+
 
     <!-- Description Section -->
     <section class="description-section">
