added all page stubs

--- a/store/mcr-002/index.html
+++ b/store/mcr-002/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="../../css/header.css">
     <link rel="stylesheet" href="../../css/footer.css">
-    <link rel="stylesheet" href="../../css/product.css">
+    <link rel="stylesheet" href="mcr-002.css">
   </head>
   
   <body>
@@ -95,12 +95,120 @@
       </p>
     </section>
 
+
+
+
+    <!-- Related Merch Section -->
+    <section class="related-merch-section">
+      <div class="related-merch-content">
+        <!-- Rainbow Container Top -->
+        <div class="rainbow-container-top">
+          <img src="../../images/rainbow-container-top.png" alt="Rainbow Container Top">
+        </div>
+
+        <!-- Merch Content -->
+        <div class="related-merch-box">
+          <h2 class="related-merch-heading">RELATED</h2>
+          <div class="merch-grid">
+
+            <!-- Merch Block 1 -->
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <a href="../../store/mcr-002/index.html" class="merch-link">
+                  <img src="../../store/mcr-002/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+                </a>
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <a href="../../store/mcr-002/index.html" class="merch-link">
+                    <p class="merch-block-artist-name">CRYHARD</p>
+                    <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
+                  </a>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$10</div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Merch Block 2 -->
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <a href="../../store/mcr-002/index.html" class="merch-link">
+                  <img src="../../store/mcr-002/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+                </a>
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <a href="../../store/mcr-002/index.html" class="merch-link">
+                    <p class="merch-block-artist-name">CRYHARD</p>
+                    <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
+                  </a>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$10</div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Merch Block 3 -->
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <a href="../../store/mcr-002/index.html" class="merch-link">
+                  <img src="../../store/mcr-002/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+                </a>
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <a href="../../store/mcr-002/index.html" class="merch-link">
+                    <p class="merch-block-artist-name">CRYHARD</p>
+                    <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
+                  </a>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$10</div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Merch Block 4 -->
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <a href="../../store/mcr-002/index.html" class="merch-link">
+                  <img src="../../store/mcr-002/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+                </a>
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <a href="../../store/mcr-002/index.html" class="merch-link">
+                    <p class="merch-block-artist-name">CRYHARD</p>
+                    <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
+                  </a>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$10</div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+        <!-- Rainbow Container Bottom -->
+        <div class="rainbow-container-bottom">
+          <img src="../../images/rainbow-container-bottom.png" alt="Rainbow Container Bottom">
+        </div>
+      </div>
+    </section>
+
     <!-- Footer Section -->
     <footer class="footer">
       <div class="footer-top">
         <div class="footer-logo-container">
           <div class="footer-logo">
-            <img src="../../images/footer-logo.svg" alt="Footer Logo">
+            <a href="../../">
+              <img src="../../images/footer-logo.svg" alt="Footer Logo">
+            </a>
           </div>
           <div class="footer-vertical-separator"></div>
         </div>
@@ -120,7 +228,18 @@
           <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
         </div>
         <div class="footer-social">
-          <img src="../../images/social-icons.svg" alt="Social Icons">
+          <a href="https://www.facebook.com/profile.php?id=61571429339039" target="_blank">
+            <img src="../../images/facebook-icon.svg" alt="Facebook Icon">
+          </a>
+          <a href="https://www.instagram.com/mysteryclass/" target="_blank">
+            <img src="../../images/instagram-icon.svg" alt="Instagram Icon">
+          </a>
+          <a href="https://www.youtube.com/@mysteryclassrecords9824" target="_blank">
+            <img src="../../images/youtube-icon.svg" alt="YouTube Icon">
+          </a>
+          <a href="https://www.tiktok.com/@mysteryclassrecords" target="_blank">
+            <img src="../../images/tiktok-icon.svg" alt="TikTok Icon">
+          </a>
         </div>
       </div>
     </footer>
