refactored file structure

--- a/store/index.html
+++ b/store/index.html
@@ -13,9 +13,9 @@
   <!-- Fonts and Stylesheets -->
   <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
   <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/header.css">
-  <link rel="stylesheet" href="../css/footer.css">
-  <link rel="stylesheet" href="../css/store.css">
+  <link rel="stylesheet" href="../css/partials/header.css">
+  <link rel="stylesheet" href="../css/partials/footer.css">
+  <link rel="stylesheet" href="../css/store/store.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
   <header class="header">
     <div class="logo">
       <a href="../">
-        <img src="../images/header-logo.svg" alt="Logo">
+        <img src="../images/header/header-logo.svg" alt="Logo">
       </a>
     </div>
     <nav class="nav">
@@ -33,10 +33,10 @@
       <a href="#" class="cart">CART</a>
     </nav>
     <div class="rainbow-strip">
-      <img src="../images/rainbow-strip.svg" alt="Rainbow Strip">
+      <img src="../images/header/header-rainbow-strip.svg" alt="Rainbow Strip">
     </div>
     <div class="hamburger-icon">
-      <img src="../images/hamburger-icon.svg" alt="Hamburger Menu">
+      <img src="../images/header/hamburger-icon.svg" alt="Hamburger Menu">
     </div>
   </header>
   <div class="header-spacer"></div>
@@ -50,7 +50,7 @@
       <div class="merch-block">
         <div class="merch-block-image-container">
           <a href="mcr-002" class="merch-link">
-            <img src="mcr-002/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+            <img src="../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
           </a>
         </div>
         <div class="merch-block-details-container">
@@ -77,7 +77,7 @@
       <div class="footer-logo-container">
         <div class="footer-logo">
           <a href="../">
-            <img src="../images/footer-logo.svg" alt="Footer Logo">
+            <img src="../images/footer/footer-logo.svg" alt="Footer Logo">
           </a>
         </div>
         <div class="footer-vertical-separator"></div>
@@ -92,26 +92,29 @@
     <div class="footer-bottom">
       <div class="footer-tagline">
         <p>UNEXPLAINABLY GOOD MUSIC.</p>
-        <img src="../images/footer-icon.svg" alt="Footer Icon">
+        <img src="../images/footer/footer-icon.svg" alt="Footer Icon">
       </div>
       <div class="footer-copyright">
         <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
       </div>
       <div class="footer-social">
         <a href="https://www.facebook.com/profile.php?id=61571429339039" target="_blank">
-          <img src="../images/facebook-icon.svg" alt="Facebook Icon">
+          <img src="../images/social-icons/facebook-icon.svg" alt="Facebook Icon">
         </a>
         <a href="https://www.instagram.com/mysteryclass/" target="_blank">
-          <img src="../images/instagram-icon.svg" alt="Instagram Icon">
+          <img src="../images/social-icons/instagram-icon.svg" alt="Instagram Icon">
         </a>
         <a href="https://www.youtube.com/@mysteryclassrecords9824" target="_blank">
-          <img src="../images/youtube-icon.svg" alt="YouTube Icon">
+          <img src="../images/social-icons/youtube-icon.svg" alt="YouTube Icon">
         </a>
         <a href="https://www.tiktok.com/@mysteryclassrecords" target="_blank">
-          <img src="../images/tiktok-icon.svg" alt="TikTok Icon">
+          <img src="../images/social-icons/tiktok-icon.svg" alt="TikTok Icon">
         </a>
       </div>
     </div>
   </footer>
+
+    <!-- Scripts -->
+
 </body>
 </html>
