--- a/artists/index.html
+++ b/artists/index.html
@@ -7,36 +7,36 @@
     <title>Artists - Mystery Class Records</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="../../images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="../../images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
 
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/artists.css">
+    <link rel="stylesheet" href="../css/partials/header.css">
+    <link rel="stylesheet" href="../css/partials/footer.css">
+    <link rel="stylesheet" href="../css/artists/artists.css">
   </head>
   
   <body>
     <!-- Header Section -->
     <header class="header">
       <div class="logo">
-        <a href="../../index.html">
-          <img src="../../images/header-logo.svg" alt="Logo">
+        <a href="../index.html">
+          <img src="../images/header/header-logo.svg" alt="Logo">
         </a>
       </div>
       <nav class="nav">
-        <a href="../../store">STORE</a>
-        <a href="../../artists">ARTISTS</a>
-        <a href="../../about">ABOUT</a>
+        <a href="../store">STORE</a>
+        <a href="../artists">ARTISTS</a>
+        <a href="../about">ABOUT</a>
         <a href="#" class="cart">CART</a>
       </nav>
       <div class="rainbow-strip">
-        <img src="../../images/rainbow-strip.svg" alt="Rainbow Strip">
+        <img src="../images/header/header-rainbow-strip.svg" alt="Rainbow Strip">
       </div>
       <div class="hamburger-icon">
-        <img src="../../images/hamburger-icon.svg" alt="Hamburger Menu">
+        <img src="../images/header/hamburger-icon.svg" alt="Hamburger Menu">
       </div>
     </header>
     <div class="header-spacer"></div>
@@ -49,11 +49,11 @@
         <!-- Artist Block 1 -->
         <div class="artist-block">
             <div class="artist-image-container">
-              <a href="cryhard/index.html">
-                <img src="../images/cryhard-artist-hero.png" alt="Cryhard">
+              <a href="cryhard">
+                <img src="../images/cryhard-band-pic.png" alt="Cryhard">
               </a>
             </div>
-            <a href="cryhard/" class="artist-name">CRYHARD</a>
+            <a href="cryhard" class="artist-name">CRYHARD</a>
         </div>
     
         <!-- Artist Block 2 -->
@@ -79,14 +79,7 @@
             </div>
             <p class="artist-name">ACID BAPTISM</p>
         </div>
-    
-        <!-- Artist Block 5 -->
-        <div class="artist-block">
-            <div class="artist-image-container">
-            <!-- Placeholder for image -->
-            </div>
-            <p class="artist-name">PAGEANT DAD</p>
-        </div>
+
       </div>
     </section>
 
@@ -96,7 +89,7 @@
         <div class="footer-logo-container">
           <div class="footer-logo">
             <a href="../">
-              <img src="../images/footer-logo.svg" alt="Footer Logo">
+              <img src="../images/footer/footer-logo.svg" alt="Footer Logo">
             </a>
           </div>
           <div class="footer-vertical-separator"></div>
@@ -111,29 +104,29 @@
       <div class="footer-bottom">
         <div class="footer-tagline">
           <p>UNEXPLAINABLY GOOD MUSIC.</p>
-          <img src="../images/footer-icon.svg" alt="Footer Icon">
+          <img src="../images/footer/footer-icon.svg" alt="Footer Icon">
         </div>
         <div class="footer-copyright">
           <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
         </div>
         <div class="footer-social">
           <a href="https://www.facebook.com/profile.php?id=61571429339039" target="_blank">
-            <img src="../images/facebook-icon.svg" alt="Facebook Icon">
+            <img src="../images/social-icons/facebook-icon.svg" alt="Facebook Icon">
           </a>
           <a href="https://www.instagram.com/mysteryclass/" target="_blank">
-            <img src="../images/instagram-icon.svg" alt="Instagram Icon">
+            <img src="../images/social-icons/instagram-icon.svg" alt="Instagram Icon">
           </a>
           <a href="https://www.youtube.com/@mysteryclassrecords9824" target="_blank">
-            <img src="../images/youtube-icon.svg" alt="YouTube Icon">
+            <img src="../images/social-icons/youtube-icon.svg" alt="YouTube Icon">
           </a>
           <a href="https://www.tiktok.com/@mysteryclassrecords" target="_blank">
-            <img src="../images/tiktok-icon.svg" alt="TikTok Icon">
+            <img src="../images/social-icons/tiktok-icon.svg" alt="TikTok Icon">
           </a>
         </div>
       </div>
     </footer>
 
-    <!-- Import Scripts -->
+    <!-- Scripts -->
 
   </body>
 </html>
