--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/partials/header.css">
+    <link rel="stylesheet" href="css/partials/footer.css">
     <link rel="stylesheet" href="css/home.css">
   </head>
 
@@ -23,7 +23,7 @@
     <header class="header">
       <div class="logo">
         <a href="index.html">
-          <img src="images/header-logo.svg" alt="Logo">
+          <img src="images/header/header-logo.svg" alt="Logo">
         </a>
       </div>
       <nav class="nav">
@@ -33,10 +33,10 @@
         <a href="#" class="cart">CART</a>
       </nav>
       <div class="rainbow-strip">
-        <img src="images/rainbow-strip.svg" alt="Rainbow Strip">
+        <img src="images/header/header-rainbow-strip.svg" alt="Rainbow Strip">
       </div>
       <div class="hamburger-icon">
-        <img src="images/hamburger-icon.svg" alt="Hamburger Menu">
+        <img src="images/header/hamburger-icon.svg" alt="Hamburger Menu">
       </div>
     </header>
     <div class="header-spacer"></div>
@@ -58,7 +58,7 @@
     <!-- Latest Release Section -->
     <div class="latest-release">
       <div class="tape-stack">
-        <img src="images/tape-stack.png" alt="Cassette Tape Stack">
+        <img src="images/side-quests-vol-1-hero.png" alt="Side Quests Vol. 1 Hero">
       </div>
       <div class="release-text">
         <h2 class="release-heading">LATEST RELEASE</h2>
@@ -79,13 +79,13 @@
         <!-- Merch Block 1 -->
         <div class="merch-block">
           <div class="merch-block-image-container">
-            <a href="store/mcr-002/index.html" class="merch-link">
-              <img src="store/mcr-002/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+            <a href="store/mcr-002/" class="merch-link">
+              <img src="images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
             </a>
           </div>
           <div class="merch-block-details-container">
             <div class="merch-block-names-container">
-              <a href="store/mcr-002/index.html" class="merch-link">
+              <a href="store/mcr-002/" class="merch-link">
                 <p class="merch-block-artist-name">CRYHARD</p>
                 <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
               </a>
@@ -99,13 +99,13 @@
         <!-- Merch Block 2 -->
         <div class="merch-block">
           <div class="merch-block-image-container">
-            <a href="store/mcr-002/index.html" class="merch-link">
-              <img src="store/mcr-002/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+            <a href="store/mcr-002/" class="merch-link">
+              <img src="images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
             </a>
           </div>
           <div class="merch-block-details-container">
             <div class="merch-block-names-container">
-              <a href="store/mcr-002/index.html" class="merch-link">
+              <a href="store/mcr-002/" class="merch-link">
                 <p class="merch-block-artist-name">CRYHARD</p>
                 <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
               </a>
@@ -119,13 +119,13 @@
         <!-- Merch Block 3 -->
         <div class="merch-block">
           <div class="merch-block-image-container">
-            <a href="store/mcr-002/index.html" class="merch-link">
-              <img src="store/mcr-002/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+            <a href="store/mcr-002/" class="merch-link">
+              <img src="images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
             </a>
           </div>
           <div class="merch-block-details-container">
             <div class="merch-block-names-container">
-              <a href="store/mcr-002/index.html" class="merch-link">
+              <a href="store/mcr-002/" class="merch-link">
                 <p class="merch-block-artist-name">CRYHARD</p>
                 <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
               </a>
@@ -139,13 +139,13 @@
         <!-- Merch Block 4 -->
         <div class="merch-block">
           <div class="merch-block-image-container">
-            <a href="store/mcr-002/index.html" class="merch-link">
-              <img src="store/mcr-002/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+            <a href="store/mcr-002/" class="merch-link">
+              <img src="images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
             </a>
           </div>
           <div class="merch-block-details-container">
             <div class="merch-block-names-container">
-              <a href="store/mcr-002/index.html" class="merch-link">
+              <a href="store/mcr-002/" class="merch-link">
                 <p class="merch-block-artist-name">CRYHARD</p>
                 <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
               </a>
@@ -165,7 +165,7 @@
         <div class="footer-logo-container">
           <div class="footer-logo">
             <a href="#">
-              <img src="images/footer-logo.svg" alt="Footer Logo">
+              <img src="images/footer/footer-logo.svg" alt="Footer Logo">
             </a>
           </div>
           <div class="footer-vertical-separator"></div>
@@ -180,23 +180,23 @@
       <div class="footer-bottom">
         <div class="footer-tagline">
           <p>UNEXPLAINABLY GOOD MUSIC.</p>
-          <img src="images/footer-icon.svg" alt="Footer Icon">
+          <img src="images/footer/footer-icon.svg" alt="Footer Icon">
         </div>
         <div class="footer-copyright">
           <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
         </div>
         <div class="footer-social">
           <a href="https://www.facebook.com/profile.php?id=61571429339039" target="_blank">
-            <img src="images/facebook-icon.svg" alt="Facebook Icon">
+            <img src="images/social-icons/facebook-icon.svg" alt="Facebook Icon">
           </a>
           <a href="https://www.instagram.com/mysteryclass/" target="_blank">
-            <img src="images/instagram-icon.svg" alt="Instagram Icon">
+            <img src="images/social-icons/instagram-icon.svg" alt="Instagram Icon">
           </a>
           <a href="https://www.youtube.com/@mysteryclassrecords9824" target="_blank">
-            <img src="images/youtube-icon.svg" alt="YouTube Icon">
+            <img src="images/social-icons/youtube-icon.svg" alt="YouTube Icon">
           </a>
           <a href="https://www.tiktok.com/@mysteryclassrecords" target="_blank">
-            <img src="images/tiktok-icon.svg" alt="TikTok Icon">
+            <img src="images/social-icons/tiktok-icon.svg" alt="TikTok Icon">
           </a>
         </div>
       </div>
