--- a/store/mcr-002/index.html
+++ b/store/mcr-002/index.html
@@ -13,9 +13,9 @@
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
     <link rel="stylesheet" href="../../css/style.css">
-    <link rel="stylesheet" href="../../css/header.css">
-    <link rel="stylesheet" href="../../css/footer.css">
-    <link rel="stylesheet" href="mcr-002.css">
+    <link rel="stylesheet" href="../../css/partials/header.css">
+    <link rel="stylesheet" href="../../css/partials/footer.css">
+    <link rel="stylesheet" href="../../css/store/mcr-002.css">
   </head>
   
   <body>
@@ -23,7 +23,7 @@
     <header class="header">
       <div class="logo">
         <a href="../../index.html">
-          <img src="../../images/header-logo.svg" alt="Logo">
+          <img src="../../images/header/header-logo.svg" alt="Logo">
         </a>
       </div>
       <nav class="nav">
@@ -33,10 +33,10 @@
         <a href="#" class="cart">CART</a>
       </nav>
       <div class="rainbow-strip">
-        <img src="../../images/rainbow-strip.svg" alt="Rainbow Strip">
+        <img src="../../images/header/header-rainbow-strip.svg" alt="Rainbow Strip">
       </div>
       <div class="hamburger-icon">
-        <img src="../../images/hamburger-icon.svg" alt="Hamburger Menu">
+        <img src="../../images/header/hamburger-icon.svg" alt="Hamburger Menu">
       </div>
     </header>
     <div class="header-spacer"></div>
@@ -45,7 +45,7 @@
     <main class="product-section">
       <div class="product-content-container">
         <div class="product-image">
-          <img src="mcr-002.png" alt="Cryhard - Of Course I Will Cassette">
+          <img src="../../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette">
         </div>
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
@@ -84,7 +84,6 @@
       <hr class="separator wide-separator">
     </main>
 
-
     <!-- Description Section -->
     <section class="description-section">
       <p>
@@ -94,9 +93,6 @@
         Of Course I Will is the band's first full-length LP that reflects on themes of growing up, anxiety, and love. Recorded in Bailey’s spare bedroom, this album embraces its DIY roots with a warm lo-fi sound.
       </p>
     </section>
-
-
-
 
     <!-- Related Merch Section -->
     <section class="related-merch-section">
@@ -114,13 +110,13 @@
             <!-- Merch Block 1 -->
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <a href="../../store/mcr-002/index.html" class="merch-link">
-                  <img src="../../store/mcr-002/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+                <a href="../../store/mcr-002/" class="merch-link">
+                  <img src="../../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
                 </a>
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
-                  <a href="../../store/mcr-002/index.html" class="merch-link">
+                  <a href="../../store/mcr-002/" class="merch-link">
                     <p class="merch-block-artist-name">CRYHARD</p>
                     <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
                   </a>
@@ -134,13 +130,13 @@
             <!-- Merch Block 2 -->
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <a href="../../store/mcr-002/index.html" class="merch-link">
-                  <img src="../../store/mcr-002/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+                <a href="../../store/mcr-002/" class="merch-link">
+                  <img src="../../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
                 </a>
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
-                  <a href="../../store/mcr-002/index.html" class="merch-link">
+                  <a href="../../store/mcr-002/" class="merch-link">
                     <p class="merch-block-artist-name">CRYHARD</p>
                     <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
                   </a>
@@ -154,13 +150,13 @@
             <!-- Merch Block 3 -->
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <a href="../../store/mcr-002/index.html" class="merch-link">
-                  <img src="../../store/mcr-002/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+                <a href="../../store/mcr-002/" class="merch-link">
+                  <img src="../../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
                 </a>
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
-                  <a href="../../store/mcr-002/index.html" class="merch-link">
+                  <a href="../../store/mcr-002/" class="merch-link">
                     <p class="merch-block-artist-name">CRYHARD</p>
                     <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
                   </a>
@@ -174,13 +170,13 @@
             <!-- Merch Block 4 -->
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <a href="../../store/mcr-002/index.html" class="merch-link">
-                  <img src="../../store/mcr-002/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+                <a href="../../store/mcr-002/" class="merch-link">
+                  <img src="../../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
                 </a>
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
-                  <a href="../../store/mcr-002/index.html" class="merch-link">
+                  <a href="../../store/mcr-002/" class="merch-link">
                     <p class="merch-block-artist-name">CRYHARD</p>
                     <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
                   </a>
@@ -207,7 +203,7 @@
         <div class="footer-logo-container">
           <div class="footer-logo">
             <a href="../../">
-              <img src="../../images/footer-logo.svg" alt="Footer Logo">
+              <img src="../../images/footer/footer-logo.svg" alt="Footer Logo">
             </a>
           </div>
           <div class="footer-vertical-separator"></div>
@@ -222,23 +218,23 @@
       <div class="footer-bottom">
         <div class="footer-tagline">
           <p>UNEXPLAINABLY GOOD MUSIC.</p>
-          <img src="../../images/footer-icon.svg" alt="Footer Icon">
+          <img src="../../images/footer/footer-icon.svg" alt="Footer Icon">
         </div>
         <div class="footer-copyright">
           <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
         </div>
         <div class="footer-social">
           <a href="https://www.facebook.com/profile.php?id=61571429339039" target="_blank">
-            <img src="../../images/facebook-icon.svg" alt="Facebook Icon">
+            <img src="../../images/social-icons/facebook-icon.svg" alt="Facebook Icon">
           </a>
           <a href="https://www.instagram.com/mysteryclass/" target="_blank">
-            <img src="../../images/instagram-icon.svg" alt="Instagram Icon">
+            <img src="../../images/social-icons/instagram-icon.svg" alt="Instagram Icon">
           </a>
           <a href="https://www.youtube.com/@mysteryclassrecords9824" target="_blank">
-            <img src="../../images/youtube-icon.svg" alt="YouTube Icon">
+            <img src="../../images/social-icons/youtube-icon.svg" alt="YouTube Icon">
           </a>
           <a href="https://www.tiktok.com/@mysteryclassrecords" target="_blank">
-            <img src="../../images/tiktok-icon.svg" alt="TikTok Icon">
+            <img src="../../images/social-icons/tiktok-icon.svg" alt="TikTok Icon">
           </a>
         </div>
       </div>
@@ -246,5 +242,6 @@
 
     <!-- Import Scripts -->
     <script src="../../scripts/add-to-cart.js"></script>
+
   </body>
 </html>
