refactored file structure v2

--- a/about/index.html
+++ b/about/index.html
@@ -12,10 +12,10 @@
 
   <!-- Fonts and Stylesheets -->
   <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/partials/header.css">
-  <link rel="stylesheet" href="../css/partials/footer.css">
-  <link rel="stylesheet" href="../css/about.css">
+  <link rel="stylesheet" href="../shared-styles/global.css">
+  <link rel="stylesheet" href="../shared-styles/header.css">
+  <link rel="stylesheet" href="../shared-styles/footer.css">
+  <link rel="stylesheet" href="about.css">
 </head>
 
 <body>
@@ -50,10 +50,10 @@
       </div>
       <div class="about-text">
         <p>
-          Cryhard is an indie/alternative band based out of Oklahoma City and consists of members of Bailey Little, Patrick Hanscom, and Zachary Kampf, Jenny Mayes, and Malcolm Bensinger. Cryhard is a project in which everyone fills different roles depending on the track. This project has been in the works since 2018 and has had assistance from several good friends along the way.
-        </p>
-        <p>
-          Of Course I Will is the band’s first full-length LP that reflects on themes of growing up, anxiety, and love. Recorded in Bailey’s spare bedroom this album embraces its DIY roots with a warm lofi sound.
+          Mystery Class Records is a DIY label founded by a group of friends united by their shared passion for music, creation, and connection. Our mission is to empower artists within our community, providing the resources and support needed to bring their unique and creative visions to life.
+          <br><br>Based in Oklahoma, we’re dedicated to enhancing the local music scene through a range of services designed to help artists thrive. These include HiFi in-house cassette duplication, graphic design, videography, marketing, record deals, vinyl orders, and physical media distribution. By offering these resources, we aim to amplify the incredible talent in Oklahoma and build a stronger, more connected music community.
+          At Mystery Class Records, we’re more than just a label—we’re a team of creators working to release unexplainably good music and support the next wave of groundbreaking artists. Stay tuned for some exciting projects and releases; we can’t wait to share them with you.
+          <br><br>— The MCR Team
         </p>
       </div>
     </div>
