--- a/artists/cryhard/index.html
+++ b/artists/cryhard/index.html
@@ -12,10 +12,10 @@
 
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
-    <link rel="stylesheet" href="../../css/style.css">
-    <link rel="stylesheet" href="../../css/partials/header.css">
-    <link rel="stylesheet" href="../../css/partials/footer.css">
-    <link rel="stylesheet" href="../../css/artists/cryhard.css">
+    <link rel="stylesheet" href="../../shared-styles/global.css">
+    <link rel="stylesheet" href="../../shared-styles/header.css">
+    <link rel="stylesheet" href="../../shared-styles/footer.css">
+    <link rel="stylesheet" href="cryhard.css">
   </head>
   
   <body>
@@ -48,7 +48,7 @@
           <p class="artist-location">OKLAHOMA CITY, OK</p>
         </div>
         <div class="artist-image-container">
-          <img src="../../images/cryhard-band-pic.png" alt="Cryhard Band Photo" class="artist-image">
+          <img src="../../images/cryhard-artist-pic.png" alt="Cryhard Band Photo" class="artist-image">
         </div>
         <div class="artist-buttons">
           <button class="listen-now-button">▶ Listen Now</button>
