--- a/artists/index.html
+++ b/artists/index.html
@@ -12,10 +12,10 @@
 
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/partials/header.css">
-    <link rel="stylesheet" href="../css/partials/footer.css">
-    <link rel="stylesheet" href="../css/artists/artists.css">
+    <link rel="stylesheet" href="../shared-styles/global.css">
+    <link rel="stylesheet" href="../shared-styles/header.css">
+    <link rel="stylesheet" href="../shared-styles/footer.css">
+    <link rel="stylesheet" href="artists.css">
   </head>
   
   <body>
@@ -50,7 +50,7 @@
         <div class="artist-block">
             <div class="artist-image-container">
               <a href="cryhard">
-                <img src="../images/cryhard-band-pic.png" alt="Cryhard">
+                <img src="../images/cryhard-artist-pic.png" alt="Cryhard">
               </a>
             </div>
             <a href="cryhard" class="artist-name">CRYHARD</a>
@@ -74,11 +74,13 @@
     
         <!-- Artist Block 4 -->
         <div class="artist-block">
-            <div class="artist-image-container">
-            <!-- Placeholder for image -->
-            </div>
-            <p class="artist-name">ACID BAPTISM</p>
-        </div>
+          <div class="artist-image-container">
+            <a href="acid-baptism">
+              <img src="../images/acid-baptism-artist-pic.png" alt="Acid Baptism">
+            </a>
+          </div>
+          <a href="acid-baptism" class="artist-name">ACID BAPTISM</a>
+      </div>
 
       </div>
     </section>
