--- a/store/mcr-002/index.html
+++ b/store/mcr-002/index.html
@@ -12,10 +12,10 @@
 
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
-    <link rel="stylesheet" href="../../css/style.css">
-    <link rel="stylesheet" href="../../css/partials/header.css">
-    <link rel="stylesheet" href="../../css/partials/footer.css">
-    <link rel="stylesheet" href="../../css/store/mcr-002.css">
+    <link rel="stylesheet" href="../../shared-styles/global.css">
+    <link rel="stylesheet" href="../../shared-styles/header.css">
+    <link rel="stylesheet" href="../../shared-styles/footer.css">
+    <link rel="stylesheet" href="mcr-002.css">
   </head>
   
   <body>
