--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/partials/header.css">
-    <link rel="stylesheet" href="css/partials/footer.css">
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="shared-styles/global.css">
+    <link rel="stylesheet" href="shared-styles/header.css">
+    <link rel="stylesheet" href="shared-styles/footer.css">
+    <link rel="stylesheet" href="home.css">
   </head>
 
   <body>      
@@ -72,9 +72,9 @@
       </div>
     </div>
 
-    <!-- Merch Section -->
-    <div class="merch-section">
-      <div class="merch-grid">
+    <!-- Store Section -->
+    <div class="store-section">
+      <div class="store-grid">
 
         <!-- Merch Block 1 -->
         <div class="merch-block">
