--- a/store/index.html
+++ b/store/index.html
@@ -12,10 +12,10 @@
 
   <!-- Fonts and Stylesheets -->
   <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/partials/header.css">
-  <link rel="stylesheet" href="../css/partials/footer.css">
-  <link rel="stylesheet" href="../css/store/store.css">
+  <link rel="stylesheet" href="../shared-styles/global.css">
+  <link rel="stylesheet" href="../shared-styles/header.css">
+  <link rel="stylesheet" href="../shared-styles/footer.css">
+  <link rel="stylesheet" href="store.css">
 </head>
 
 <body>
@@ -49,13 +49,13 @@
       <!-- Merch Block 1 -->
       <div class="merch-block">
         <div class="merch-block-image-container">
-          <a href="mcr-002" class="merch-link">
+          <a href="../store/mcr-002/" class="merch-link">
             <img src="../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
           </a>
         </div>
         <div class="merch-block-details-container">
           <div class="merch-block-names-container">
-            <a href="mcr-002" class="merch-link">
+            <a href="../store/mcr-002/" class="merch-link">
               <p class="merch-block-artist-name">CRYHARD</p>
               <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
             </a>
